working on table for islands

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,6 +8,8 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -36,18 +38,21 @@ title: 4. Exploration of the Formative Learning Design Process
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
-    -   [P1 and P2: Explorations and
-        innovations](#p1-and-p2-explorations-and-innovations)
-    -   [P3 and P4: The main game making
-        programmes](#p3-and-p4-the-main-game-making-programmes)
-    -   [P5: Adapting to MakeCode Arcade and more formal
-        settings](#p5-adapting-to-makecode-arcade-and-more-formal-settings)
+    -   [P1: Explorations and
+        innovations](#p1-explorations-and-innovations)
+    -   [P2: The game making using suggested
+        patterns.](#p2-the-game-making-using-suggested-patterns.)
+    -   [P3 adding a process drama](#p3-adding-a-process-drama)
+    -   [P4: Adapting to MakeCode Arcade and more formal
+        settings](#p4-adapting-to-makecode-arcade-and-more-formal-settings)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Design tensions experienced as a researcher /
-        designer](#design-tensions-experienced-as-a-researcher-designer)
-        -   [Tensions surrounding authenticity of tool
-            use](#tensions-surrounding-authenticity-of-tool-use)
+    -   [Design tensions experienced as a researcher / designer - HOW
+        MUCH TO REFOCUS ON LARGER CONFLICTS - REDUCE THIS DOWN - CHECK
+        THE FOCUS AND NEED FOR THIS
+        SECTION?](#design-tensions-experienced-as-a-researcher-designer---how-much-to-refocus-on-larger-conflicts---reduce-this-down---check-the-focus-and-need-for-this-section)
+        -   [My analysis and concerns around authenticity in choice of
+            toolset](#my-analysis-and-concerns-around-authenticity-in-choice-of-toolset)
 -   [Participant conflicts /
     contractions](#participant-conflicts-contractions)
 -   [1. Identity hardcore coding & dysfunctional group work - P1 -
@@ -88,7 +93,7 @@ title: 4. Exploration of the Formative Learning Design Process
         approach](#resolving-the-conflict-by-discarding-this-approach)
         -   [Limits to the learning dimensions map in an informal
             setting](#limits-to-the-learning-dimensions-map-in-an-informal-setting)
--   [Conclusion](#conclusion)
+  - [Conclusion](#conclusion)
     -   [Summary of barriers exposed in this study
         -](#summary-of-barriers-exposed-in-this-study--)
     -   [Discussion on the emergent (and mutual) nature of the design
@@ -1054,30 +1059,59 @@ This conflict provoked me to create resources which could serve to pull particip
 
 SIGNPOSTING WHY THIS SECTION IS USEFUL HERE
 
+
+<!-- stylised in a way that mirrored a map used for navigation in a quest-themed computer game.
+
+As learners traced a trail between the different island/missions they had visited, the map provoked learners to reflect on their journey and progress. However, this approach may be too labour and time intensive for many class environments.
+
+
+-->
+
+
 #### Using Physical Maps of Missions as Game Design Patterns - COMPRESS
 
-I printed out a large-scale colour map of a coastal landscape stylised in a way that mirrored a map used for navigation in a quest-themed computer game. As learners traced a trail between the different island/missions they had visited, the map provoked learners to reflect on their journey and progress. However, this approach may be too labour and time intensive for many class environments.
-
-The game pattern missions were represented as different islands . Learners took time to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it. They also kept a track of the missions that they had completed by tracing a trail as they progressed.
-
-In addition the colourful, physical and visual representation served to encourage a sense of community and peer learning. When moving the counter on the map I prompted them to reflect on the coding concepts or other learning dimensions that they had been working with.
+I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
 
 
-![learning islands](./Pictures/maps_2000.png)
-![learning islands]({{ site.baseurl }}/Pictures/maps_2000.png)
+
+![learning islands](./Pictures/navigational_paper_map.png)
+![learning islands]({{ site.baseurl }}/Pictures/navigational_paper_map.png)
 _Missions as Islands_
 
 REPLACE WITH 360 OF MAPS
 
+My motivations for this intervention were that it encourage a sense of community and peer learning that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
+
+
+**Minimal evidence in this study**
+
+The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
+
+Despite minimal evidence due to afactor later explored, there were some observations.
+
+
+
+| **Transcript**| **Description**|
+|----------------|------------------|
+|Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  | Mick cuts a out an image representing a GDP of key and doors.   |
+|  Olivia(c): So I've gone really far away on the map. <br/>   |  Olivia(c) quickly places her marker on that image and grins. Other parents and children to the right and left of her look at her marker.  |
+| Mick(f): Yeah.  |  Mick smiles too whilst walking to get and glue another cut out. |
+|  Olivia(c): Heh!  | Olivia walks back to her mother and asked to be picked up  |
+| Mick(f): There should be some blue tack if you are struggling to make your character stand up.   | Mick walks around the back of the group and sticks another GDP pattern on a different pre-drawn island.  Roxanne(p) notices Agnes's(c) falling character and passes the child blue   |
+| Rozanne(p): Oh that's something you were wanting to do |  Roxanne points at a cut out that Mick has just stuck down |
+|   |   |
+|   |   |
+|   |   |
+
+
+
 <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
 
-**Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey.
+<!-- **Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey. -->
 
-**Learners take on features which are too advanced or complex for their current coding level.** The use of a physical map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
+I have de-prioritised Maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES,
 
-
-
-I have de-prioritised Maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods)
+and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods)
 
 MOVE LATER? FINAL CHAPTER?
 It is of value to out like key tensions in the design that maps have the potential to address in more formal teaching environments. I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
@@ -1158,14 +1192,13 @@ Extra missions which highlight game challenge and user experience may help learn
 
 
 
-### Resolving the conflict by discarding this approach
+#### Resolving the conflict by minimising elements in an informal setting
 
 Ultimately, I gave up on this approach as it did not align with the view of agency that I was trying to create in the learning environment.
 
 Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the informal design process.
 
-
-#### Limits to the learning dimensions map in an informal setting
+**Learning dimensions map**
 
 This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
 
@@ -1205,7 +1238,7 @@ NOTE - THIS IS NEEDED FOR LATER CHAPTERS
 
 ### Discussion on the emergent (and mutual) nature of the design (and reseach?) process.
 
-As explored in chapter x , the process of this chapter is in line with (participantory design and DBR) perspectives approaching research with an open remit to see what tensions come into focus in a particular setting.
+As explored in chapter three , the process of this chapter is in line with exploratory research perspectives with an open remit to see what tensions come into focus in a particular setting.
 
 This allows a subsequent  refocusing of research to explore these emerging issues in more depth.
 
@@ -1213,24 +1246,29 @@ The most significant manifestation of this process is in the evolved of the lear
 
 Resources had with concrete additions from parents, PGCE students, Edlab students, University colleagues and with more indirect ongoing feedback from young people and their parents.
 
-With guidance, PGCE students created printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect. This approach was more prescriptive than I would have adopted, however it worked well. I then made a connection to UMC literature.
+With guidance, PGCE students created printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. These include changing gravity, altering the player speed, background colour of the game and the game layout of the platforms, hazards and food to collect.
 
-NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY.
+This approach was more prescriptive than I would have adopted, however it worked well. This hesitation overcome by intervention from others can be explored in terms of agency. The students, fresh from PGCE training focused on increasing a scaffolded task which increased the instrumental agency of the participants.
 
-The particular nature of the setting is significant.
-It holds promise to generate resources more generally.
-Something explored in conclusion.  
+There is a connection in this process to foundational theories in the area of HCI and computing education.
+
+  - Affordances
+  - UMC literature
+  - Game design patterns
+
+<!-- NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY. -->
+
+The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
 
 <!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
 After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
-<!-- The process of creating assets builds in Molly the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel".  -->
 
 ### Authentic tool use and instrumental agency
 
 The impact of coding tool use on instrumental agency can be explored here.
 
-#### Analysis in relatin to existing design heuristics of toolsets
+#### Analysis in relation to existing design heuristics of toolsets
 
 The complexity of coding and the resulting challenges of learning to code has yield much research on guidance in the process of designing toolsets to support novice coders [@resnick_reflections_2005] - (find others on the evolution of LOGO).  
 
