--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -26,18 +26,21 @@
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
-    -   [P1 and P2: Explorations and
-        innovations](#p1-and-p2-explorations-and-innovations)
-    -   [P3 and P4: The main game making
-        programmes](#p3-and-p4-the-main-game-making-programmes)
-    -   [P5: Adapting to MakeCode Arcade and more formal
-        settings](#p5-adapting-to-makecode-arcade-and-more-formal-settings)
+    -   [P1: Explorations and
+        innovations](#p1-explorations-and-innovations)
+    -   [P2: The game making using suggested
+        patterns.](#p2-the-game-making-using-suggested-patterns.)
+    -   [P3 adding a process drama](#p3-adding-a-process-drama)
+    -   [P4: Adapting to MakeCode Arcade and more formal
+        settings](#p4-adapting-to-makecode-arcade-and-more-formal-settings)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Design tensions experienced as a researcher /
-        designer](#design-tensions-experienced-as-a-researcher-designer)
-        -   [Tensions surrounding authenticity of tool
-            use](#tensions-surrounding-authenticity-of-tool-use)
+    -   [Design tensions experienced as a researcher / designer - HOW
+        MUCH TO REFOCUS ON LARGER CONFLICTS - REDUCE THIS DOWN - CHECK
+        THE FOCUS AND NEED FOR THIS
+        SECTION?](#design-tensions-experienced-as-a-researcher-designer---how-much-to-refocus-on-larger-conflicts---reduce-this-down---check-the-focus-and-need-for-this-section)
+        -   [My analysis and concerns around authenticity in choice of
+            toolset](#my-analysis-and-concerns-around-authenticity-in-choice-of-toolset)
 -   [Participant conflicts /
     contractions](#participant-conflicts-contractions)
 -   [1. Identity hardcore coding & dysfunctional group work - P1 -
