--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1099,11 +1099,12 @@ Despite minimal evidence due to afactor later explored, there were some observat
 |  Olivia(c): Heh!  | Olivia walks back to her mother and asked to be picked up  |
 | Mick(f): There should be some blue tack if you are struggling to make your character stand up.   | Mick walks around the back of the group and sticks another GDP pattern on a different pre-drawn island.  Roxanne(p) notices Agnes's(c) falling character and passes the child blue   |
 | Rozanne(p): Oh that's something you were wanting to do |  Roxanne points at a cut out that Mick has just stuck down |
-|   |   |
-|   |   |
-|   |   |
-
-
+|  Richie(c): I like the idea of making the enemies move |  Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter? |
+|  Richie(c): No. |   |
+|  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.  | Roxanne  waves sheet and smiles at Mick and laughs.   |
+|  Mick(f): Great that's good. We've got some sheets that I would recommend. That are almost like gateways to other places. One is to make your character move  when it moves around the screen.  | Mick moves hands when saying make your character move, indicating animation.   |
+|  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then ponts to Clive and Pearl to indicate you guys.   |  |   |   |
+|   |   |   |   |   |
 
 <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
 
