micro worlds in lit review and changes to discussion chapter four

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1103,8 +1103,9 @@ Despite minimal evidence due to afactor later explored, there were some observat
 |  Richie(c): No. |   |
 |  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.  | Roxanne  waves sheet and smiles at Mick and laughs.   |
 |  Mick(f): Great that's good. We've got some sheets that I would recommend. That are almost like gateways to other places. One is to make your character move  when it moves around the screen.  | Mick moves hands when saying make your character move, indicating animation.   |
-|  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then ponts to Clive and Pearl to indicate you guys.   |  |   |   |
-|   |   |   |   |   |
+|  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then points to Clive and Pearl to indicate you guys.  
+|  x | x  |
+| x  | x  |
 
 <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
 
@@ -1265,11 +1266,14 @@ The particular nature of the informal setting with the participation of engaged 
 After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
 
-### Authentic tool use and instrumental agency
 
-The impact of coding tool use on instrumental agency can be explored here.
 
-#### Analysis in relation to existing design heuristics of toolsets
+### Analysis in relation to existing research on related design toolsets
+
+
+
+
+#### Comparing to Scratch and Microworlds
 
 The complexity of coding and the resulting challenges of learning to code has yield much research on guidance in the process of designing toolsets to support novice coders [@resnick_reflections_2005] - (find others on the evolution of LOGO).  
 
@@ -1288,12 +1292,17 @@ Indeed, Scratch itself has moved to a web-bsaed online by default process in the
 
 While these heuristics provide a useful tool for designers and practitioners supporting creative coding activities there is less intrinsic guidance to help seed community practices. While useful community tools like remix, online sharing, and collabs are part of the community, the focus of the project and of much of the surrounding research is on a broadly creative tool set rather than to accelerate a group process.
 
-**Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.  
-
 
 LINK - While principles are useful for the designer of the learning experience, they are less accessible to the end user. Resnick's work is heavily focused on the affordances of the tool for the general purposes of media creation. This leaves the responsibility for teachers to fill in how production is guided.
 
-The next chapter explores one element on this guidance for this programe in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
+The next chapter explores one element on this guidance for this programme in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
+
+#### Authentic tool use and instrumental agency
+
+The impact of coding tool use on instrumental agency can be explored here to develop the previous section
+
+**Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.  
+
 
 ### Link to next chapter
 
