--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1275,14 +1275,20 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 
 #### Comparing to Scratch and Microworlds
 
+This section compares the designed learning environment to the design factors of others exposed in research. In particular research on Microworlds and the Scratch tool, both tools were explored in brief in the literature review, is examined from the lenses of authenticity and agency.
+
 The complexity of coding and the resulting challenges of learning to code has yield much research on guidance in the process of designing toolsets to support novice coders [@resnick_reflections_2005] - (find others on the evolution of LOGO).  
 
 The user-friendly design heuristics of  low-thresholds, wide-walls, high-ceiling
 NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs - extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.  
 
-NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET
+<!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
 
-In this design the tools set is distinct from tools like scratch which are self-contained to a large degree (while interacting with a website) - thus bears greater similarity with the Microworld concepts.
+In this design the tools set is distinct from tools like
+
+Scratch which are self-contained to a large degree  
+
+In many thus bears greater similarity with the Microworld concepts.
 
 The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default. This was picked up on by the community as they viewed each others assets and playtested games.
 
