on heuristics of scratch and affordances

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -413,13 +413,12 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
-The process of making a game was driven from early stages by learners requests to implement game featu  res which followed freely with little prompting.
+The process of making a game was driven from early stages by learners requests to implement game features which followed freely with little prompting.
 
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. Instead a collection or menu of elements for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
 
 
 In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of resources.
-
 
 Toby then browses the web page of a menu of game design patterns and selects moving enemies. At this scope of activity the goal is to increase the challenge and variety of the game experience. It appears probable that his is also guided by the expectations embodies in the page itself. EXPLAIN affordances OF DESIGN HERE.
 
@@ -1238,7 +1237,7 @@ https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/
 
 NOTE - THIS IS NEEDED FOR LATER CHAPTERS
 
-### Discussion on the emergent (and mutual) nature of the design (and reseach?) process.
+### Discussion on the emergent (and mutual) nature of the design (and research?) process.
 
 As explored in chapter three , the process of this chapter is in line with exploratory research perspectives with an open remit to see what tensions come into focus in a particular setting.
 
@@ -1266,29 +1265,32 @@ The particular nature of the informal setting with the participation of engaged 
 After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
 
-
-
 ### Analysis in relation to existing research on related design toolsets
-
-
 
 
 #### Comparing to Scratch and Microworlds
 
 This section compares the designed learning environment to the design factors of others exposed in research. In particular research on Microworlds and the Scratch tool, both tools were explored in brief in the literature review, is examined from the lenses of authenticity and agency.
 
-The complexity of coding and the resulting challenges of learning to code has yield much research on guidance in the process of designing toolsets to support novice coders [@resnick_reflections_2005] - (find others on the evolution of LOGO).  
+While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speal LOGO to progress. The affordances of the physical turtle provide visible motivation.  
 
-The user-friendly design heuristics of  low-thresholds, wide-walls, high-ceiling
-NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs - extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.  
+Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding. Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT.
 
+In scratch, the ability to reduce syntax errors through block coding was adopted.
+
+Reducing the complexity of coding environment in one of serveral guidelines ance in the process of designing toolsets to support creative coding [@resnick_reflections_2005]. Other user-friendly design heuristics inclue:  low-thresholds, wide-walls, high-ceiling
+NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs -
+
+<!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
 <!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
 
-In this design the tools set is distinct from tools like
+In this design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be  self-contained, the use of a JZ library in a web coding environment is more open-ended.
 
-Scratch which are self-contained to a large degree  
+The clear software-based self-containment has clear advantages of control and reducing possibility for compounding errors.
 
-In many thus bears greater similarity with the Microworld concepts.
+In addition scratch also expanded the value of the community for feedback and for motivational factors. The Scratch online 
+
+While, there is a potential to
 
 The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default. This was picked up on by the community as they viewed each others assets and playtested games.
 
