--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -9,7 +9,6 @@ categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
 
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -89,20 +88,21 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Learning Dimensions Map](#learning-dimensions-map)
         -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
             ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
-    -   [Resolving the conflict by discarding this
-        approach](#resolving-the-conflict-by-discarding-this-approach)
-        -   [Limits to the learning dimensions map in an informal
-            setting](#limits-to-the-learning-dimensions-map-in-an-informal-setting)
-  - [Conclusion](#conclusion)
+        -   [Resolving the conflict by minimising elements in an
+            informal
+            setting](#resolving-the-conflict-by-minimising-elements-in-an-informal-setting)
+-   [Conclusion](#conclusion)
     -   [Summary of barriers exposed in this study
         -](#summary-of-barriers-exposed-in-this-study--)
     -   [Discussion on the emergent (and mutual) nature of the design
-        (and reseach?)
-        process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-reseach-process.)
-    -   [Authentic tool use and instrumental
-        agency](#authentic-tool-use-and-instrumental-agency)
-        -   [Analysis in relatin to existing design heuristics of
-            toolsets](#analysis-in-relatin-to-existing-design-heuristics-of-toolsets)
+        (and research?)
+        process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
+    -   [Analysis in relation to existing research on related design
+        toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
+        -   [Comparing to Scratch and
+            Microworlds](#comparing-to-scratch-and-microworlds)
+        -   [Authentic tool use and instrumental
+            agency](#authentic-tool-use-and-instrumental-agency)
     -   [Link to next chapter](#link-to-next-chapter)
 
 ## Research Questions - June 2023
@@ -1074,7 +1074,7 @@ I used flip chart paper and print outs to draw a coastal landscape with GDPs rep
 
 
 ![learning islands](./Pictures/navigational_paper_map.png)
-![learning islands]({{ site.baseurl }}/Pictures/navigational_paper_map.png)
+![learning islands]({{ site.baseurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png)
 _Missions as Islands_
 
 REPLACE WITH 360 OF MAPS
@@ -1288,7 +1288,7 @@ In this design the tools set is distinct from tools like Scratch, Logo in that w
 
 The clear software-based self-containment has clear advantages of control and reducing possibility for compounding errors.
 
-In addition scratch also expanded the value of the community for feedback and for motivational factors. The Scratch online 
+In addition scratch also expanded the value of the community for feedback and for motivational factors. The Scratch online
 
 While, there is a potential to
 
