--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -77,18 +77,19 @@
         -   [Learning Dimensions Map](#learning-dimensions-map)
         -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
             ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
-    -   [Resolving the conflict by discarding this
-        approach](#resolving-the-conflict-by-discarding-this-approach)
-        -   [Limits to the learning dimensions map in an informal
-            setting](#limits-to-the-learning-dimensions-map-in-an-informal-setting)
+        -   [Resolving the conflict by minimising elements in an
+            informal
+            setting](#resolving-the-conflict-by-minimising-elements-in-an-informal-setting)
 -   [Conclusion](#conclusion)
     -   [Summary of barriers exposed in this study
         -](#summary-of-barriers-exposed-in-this-study--)
     -   [Discussion on the emergent (and mutual) nature of the design
-        (and reseach?)
-        process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-reseach-process.)
-    -   [Authentic tool use and instrumental
-        agency](#authentic-tool-use-and-instrumental-agency)
-        -   [Analysis in relatin to existing design heuristics of
-            toolsets](#analysis-in-relatin-to-existing-design-heuristics-of-toolsets)
+        (and research?)
+        process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
+    -   [Analysis in relation to existing research on related design
+        toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
+        -   [Comparing to Scratch and
+            Microworlds](#comparing-to-scratch-and-microworlds)
+        -   [Authentic tool use and instrumental
+            agency](#authentic-tool-use-and-instrumental-agency)
     -   [Link to next chapter](#link-to-next-chapter)
