--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1074,7 +1074,7 @@ I used flip chart paper and print outs to draw a coastal landscape with GDPs rep
 
 
 ![learning islands](./Pictures/navigational_paper_map.png)
-![learning islands]({{ site.baseurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png)
+![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png)
 _Missions as Islands_
 
 REPLACE WITH 360 OF MAPS
