--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1124,6 +1124,9 @@ In learning environments where there is a lot of choice assessing learners via o
 
 When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes.
 
+Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects. Has traction for NCCE quick read. The value of facilitators mapping out concept which are likely to occur in project work can help with x, y and z.
+The knock on effect on reducing barriers to agency is of particular interest to this study.
+
 // REWRITE FOLLOWING
 <!-- Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects.  -->
 
@@ -1288,20 +1291,26 @@ In this design the tools set is distinct from tools like Scratch, Logo in that w
 
 The clear software-based self-containment has clear advantages of control and reducing possibility for compounding errors.
 
-In addition scratch also expanded the value of the community for feedback and for motivational factors. The Scratch online
 
-While, there is a potential to
 
-The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default. This was picked up on by the community as they viewed each others assets and playtested games.
-
-Indeed, Scratch itself has moved to a web-bsaed online by default process in the lifespan of this research.  
 
 **How Resnick's design principles / heuristics differ from use of GDPs and processes in this chapter:**
 
-While these heuristics provide a useful tool for designers and practitioners supporting creative coding activities there is less intrinsic guidance to help seed community practices. While useful community tools like remix, online sharing, and collabs are part of the community, the focus of the project and of much of the surrounding research is on a broadly creative tool set rather than to accelerate a group process.
+While these heuristics provide a useful tool for designers and practitioners supporting creative coding activities there is less intrinsic guidance to help seed community practices.
+
+**Community design and guiding community behaviours :**
+
+In addition, scratch also expanded the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
+
+<!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
+
+This was picked up on by the community as they viewed each others assets and playtested games.
+
+While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask particant to focus their attention in this direction.
 
 
-LINK - While principles are useful for the designer of the learning experience, they are less accessible to the end user. Resnick's work is heavily focused on the affordances of the tool for the general purposes of media creation. This leaves the responsibility for teachers to fill in how production is guided.
+LINK -
+While Resnick's principles are useful for the designer of the learning experience, they are less accessible to the end user. Resnick's work is heavily focused on the affordances of the tool for the general purposes of media creation. This leaves the responsibility for teachers to fill in how production is guided.
 
 The next chapter explores one element on this guidance for this programme in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
 
